openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-python
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: todo-python-single
    app.kubernetes.io/name: todo-python
    app.kubernetes.io/part-of: todo
    app.openshift.io/runtime: python
  annotations:
    app.openshift.io/vcs-uri: 'https://github.com/jkeam/todo-python.git'
    app.openshift.io/vcs-ref: 'main'
  name: todo-python
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-python
  template:
    metadata:
      labels:
        app: todo-python
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - image: 'quay.io/jkeam/todo-python@sha256:330192fd854a2b9c50aa7a705e8c9c2e571a4f74c8f3306fae334ce33106d857'
        name: todo-python
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "3000m"
        ports:
        - name: the-port
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: the-port
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: the-port
          initialDelaySeconds: 5
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /health
            port: the-port
          initialDelaySeconds: 5
          periodSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
