openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-python
    discovery.3scale.net: 'true'
  annotations:
    discovery.3scale.net/scheme: 'http'
    discovery.3scale.net/port: '8080'
    discovery.3scale.net/path: '/'
    discovery.3scale.net/description-path: '/openapi.json'
  name: todo-python-service
  namespace: todo
spec:
  ports:
  - name: service-port
    port: 8080
    protocol: TCP
    targetPort: the-port
  selector:
    app: todo-python
  type: ClusterIP
